* RECENT CHANGES
*******************************************************************************

=== 1.0.6 ===
* Added opacity manipulation to the lsp::Color class.
* Added LSPString::range_length() method to compute the length of the range.
* Added LSPString::to_unix() and LSPString::to_dos() line ending conversion routines.

=== 1.0.5 ===
* Updated PrefixLoader interface and implementation.
* Fixed the improper use of nanosleep when introducing the sleep function.
* Fixed bug in path matching algorithm for io::PathPattern class.
* Better handling of error codes for files under Windows platform.
* Fixed failed case for ipc::Process launching algorithm under Windows platform.
* Fixed LSPString behaviour related to call of get_native() method for empty string.
* Fixed bug in io::Dir::reads() method for Windows platform that returned invalid
  file attributes.
* Updated build scripts.

=== 1.0.4 ===
* Updated build scripts.

=== 1.0.3 ===
* Updated grammar in several text comments.
* Added system::sleep_msec function for millisecond-precise sleeps.
* Fixed typo in Wavefront Object File Format name.
* Renamed method OutBitStream::writeb to OutBitStream::bwrite to not to clash with
  the parent IOutStream class.
* Added LSPString::ends_with_ascii and LSPString::ends_with_ascii_nocase methods.

=== 1.0.2 ===
* Updated build scripts.

=== 1.0.1 ===
* Better support of RoomEqWizard ill-formed files.

=== 1.0.0 ===
* Improved expr::format functions: extended format specifiers.
* Refactoring of the lsp::Color utility class interface.
* Added support of XYZ color space by the lsp::Color utility class.
* Added support of CIE LAB D65 color space by the lsp::Color utility class.
* Added support of CIE LCH D65 color space by the lsp::Color utility class.
* Added support of CMYK color space by the lsp::Color utility class.
* Added support of function-look color parsing by the lsp::Color utility class.