@@ -222,8 +222,8 @@ namespace lsp
             bool append(const LSPString *src);
             bool append(const LSPString *src, ssize_t first);
             bool append(const LSPString *src, ssize_t first, ssize_t last);
-            inline bool append_ascii(const char *arr) { return append_ascii(arr, ::strlen(arr)); };
-            inline bool append_utf8(const char *arr) { return append_utf8(arr, ::strlen(arr)); };
+            inline bool append_ascii(const char *arr) { return append_ascii(arr, ::strlen(arr));    };
+            inline bool append_utf8(const char *arr)  { return append_utf8(arr, ::strlen(arr));     };
             bool append_utf16(const lsp_utf16_t *arr);
 
             bool prepend(lsp_wchar_t ch);
@@ -233,8 +233,8 @@ namespace lsp
             bool prepend(const LSPString *src);
             bool prepend(const LSPString *src, ssize_t first);
             bool prepend(const LSPString *src, ssize_t first, ssize_t last);
-            inline bool prepend_ascii(const char *arr) { return prepend_ascii(arr, ::strlen(arr)); };
-            inline bool prepend_utf8(const char *arr) { return prepend_ascii(arr, ::strlen(arr)); };
+            inline bool prepend_ascii(const char *arr) { return prepend_ascii(arr, ::strlen(arr));  };
+            inline bool prepend_utf8(const char *arr)  { return prepend_utf8(arr, ::strlen(arr));   };
 
             /** Get unicode character at the specified position
              *
