@@ -6,6 +6,7 @@
 * Added opacity manipulation to the lsp::Color class.
 * Added LSPString::range_length() method to compute the length of the range.
 * Added LSPString::to_unix() and LSPString::to_dos() line ending conversion routines.
+* Fixed LSPString::prepend_utf8() function.
 
 === 1.0.5 ===
 * Updated PrefixLoader interface and implementation.
